errors
try to resolve IllegalError and DirectBuffer error